listview and fetch data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,306 +1,1 @@
-<mat-card class="form-card">
-  <mat-card-title>BMW Form</mat-card-title>
-  <div class="form-container">
-    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-grid">
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>App_Id</mat-label>
-          <input matInput formControlName="APP_ID">
-          <mat-error *ngIf="form.get('APP_ID')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>App Migration Activity</mat-label>
-          <input matInput formControlName="APP_MIGRATION_ACTIVITY">
-          <mat-error *ngIf="form.get('APP_MIGRATION_ACTIVITY')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>App Name</mat-label>
-          <input matInput formControlName="APP_NAME">
-          <mat-error *ngIf="form.get('APP_NAME')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>As-Is Application Type and Tech Stack Tags</mat-label>
-          <input matInput formControlName="AS_IS_APPLICATION_TYPE_AND_TECH_STACK_TAGS">
-          <mat-error *ngIf="form.get('AS_IS_APPLICATION_TYPE_AND_TECH_STACK_TAGS')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Budget Difference</mat-label>
-          <input matInput formControlName="BUDGET_DIFFERENCE">
-          <mat-error *ngIf="form.get('BUDGET_DIFFERENCE')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Budget remaining at FG-T-3 after funding distribution</mat-label>
-          <input matInput formControlName="BUDGET_REMAINING_AT_FG_T_3_AFTER_FUNDING_DISTRIBUTION">
-          <mat-error *ngIf="form.get('BUDGET_REMAINING_AT_FG_T_3_AFTER_FUNDING_DISTRIBUTION')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Budget requested</mat-label>
-          <input matInput formControlName="BUDGET_REQUESTED">
-          <mat-error *ngIf="form.get('BUDGET_REQUESTED')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Cloud Room Id</mat-label>
-          <input matInput formControlName="CLOUD_ROOM_ID">
-          <mat-error *ngIf="form.get('CLOUD_ROOM_ID')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Completion Attestation Date</mat-label>
-          <input matInput [matDatepicker]="completionAttestationDatePicker" formControlName="COMPLETION_ATTESTATION_DATE">
-          <mat-datepicker-toggle matSuffix [for]="completionAttestationDatePicker"></mat-datepicker-toggle>
-          <mat-datepicker #completionAttestationDatePicker></mat-datepicker>
-          <mat-error *ngIf="form.get('COMPLETION_ATTESTATION_DATE')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Completion Attestation Funding Total</mat-label>
-          <input matInput formControlName="COMPLETION_ATTESTATION_FUNDING_TOTAL">
-          <mat-error *ngIf="form.get('COMPLETION_ATTESTATION_FUNDING_TOTAL')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Criticality</mat-label>
-          <input matInput formControlName="CRITICALITY">
-          <mat-error *ngIf="form.get('CRITICALITY')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Dashboard Scope</mat-label>
-          <input matInput formControlName="DASHBOARD_SCOPE">
-          <mat-error *ngIf="form.get('DASHBOARD_SCOPE')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>DB Cloud Target</mat-label>
-          <input matInput formControlName="DB_CLOUD_TARGET">
-          <mat-error *ngIf="form.get('DB_CLOUD_TARGET')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>DB Migration Activity</mat-label>
-          <input matInput formControlName="DB_MIGRATION_ACTIVITY">
-          <mat-error *ngIf="form.get('DB_MIGRATION_ACTIVITY')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Department</mat-label>
-          <input matInput formControlName="DEPARTMENT">
-          <mat-error *ngIf="form.get('DEPARTMENT')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Fundable</mat-label>
-          <input matInput formControlName="FUNDABLE">
-          <mat-error *ngIf="form.get('FUNDABLE')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Fundable Reason</mat-label>
-          <input matInput formControlName="FUNDABLE_REASON">
-          <mat-error *ngIf="form.get('FUNDABLE_REASON')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Funding Generated</mat-label>
-          <input matInput formControlName="FUNDING_GENERATED">
-          <mat-error *ngIf="form.get('FUNDING_GENERATED')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Hyperscaler</mat-label>
-          <input matInput formControlName="HYPERSCALER">
-          <mat-error *ngIf="form.get('HYPERSCALER')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Infrastructure Components</mat-label>
-          <input matInput formControlName="INFRASTRUCTURE_COMPONENTS">
-          <mat-error *ngIf="form.get('INFRASTRUCTURE_COMPONENTS')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Initial Attestation Date</mat-label>
-          <input matInput [matDatepicker]="initialAttestationDatePicker" formControlName="INITIAL_ATTESTATION_DATE">
-          <mat-datepicker-toggle matSuffix [for]="initialAttestationDatePicker"></mat-datepicker-toggle>
-          <mat-datepicker #initialAttestationDatePicker></mat-datepicker>
-          <mat-error *ngIf="form.get('INITIAL_ATTESTATION_DATE')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Initial Attestation Funding Total</mat-label>
-          <input matInput formControlName="INITIAL_ATTESTATION_FUNDING_TOTAL">
-          <mat-error *ngIf="form.get('INITIAL_ATTESTATION_FUNDING_TOTAL')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Interfaces In/Out</mat-label>
-          <input matInput formControlName="INTERFACES_IN_OUT">
-          <mat-error *ngIf="form.get('INTERFACES_IN_OUT')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row"></div>
-
-      <mat-form-field appearance="fill">
-        <mat-label>Interfaces In/Out</mat-label>
-        <input matInput formControlName="INTERFACES_IN_OUT">
-        <mat-error *ngIf="form.get('INTERFACES_IN_OUT')?.hasError('required')">This field is required</mat-error>
-      </mat-form-field>
-
-      <div class="form-row"></div>
-      <mat-form-field appearance="fill">
-        <mat-label>Jira Fix Version End</mat-label>
-        <input matInput formControlName="JIRA_FIX_VERSION_END">
-        <mat-error *ngIf="form.get('JIRA_FIX_VERSION_END')?.hasError('required')">This field is required</mat-error>
-      </mat-form-field>
-
-      <div class="form-row"></div>
-      <mat-form-field appearance="fill">
-        <mat-label>Jira Fix Version Start</mat-label>
-        <input matInput formControlName="JIRA_FIX_VERSION_START">
-        <mat-error *ngIf="form.get('JIRA_FIX_VERSION_START')?.hasError('required')">This field is required</mat-error>
-      </mat-form-field>
-
-      <div class="form-row"></div>
-      <mat-form-field appearance="fill">
-        <mat-label>Max Acceptable Downtime</mat-label>
-        <input matInput formControlName="MAX_ACCEPTABLE_DOWNTIME">
-        <mat-error *ngIf="form.get('MAX_ACCEPTABLE_DOWNTIME')?.hasError('required')">This field is required</mat-error>
-      </mat-form-field>
-
-      <div class="form-row"></div>
-      <mat-form-field appearance="fill">
-        <mat-label>Migration Method</mat-label>
-        <input matInput formControlName="MIGRATION_METHOD">
-        <mat-error *ngIf="form.get('MIGRATION_METHOD')?.hasError('required')">This field is required</mat-error>
-      </mat-form-field>
-
-      <div class="form-row"></div>
-      <mat-form-field appearance="fill">
-        <mat-label>Migration Path</mat-label>
-        <input matInput formControlName="MIGRATION_PATH">
-        <mat-error *ngIf="form.get('MIGRATION_PATH')?.hasError('required')">This field is required</mat-error>
-      </mat-form-field>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Pilot</mat-label>
-          <input matInput formControlName="PILOT">
-          <mat-error *ngIf="form.get('PILOT')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Resilience Class</mat-label>
-          <input matInput formControlName="RESILIANCE_CLASS">
-          <mat-error *ngIf="form.get('RESILIANCE_CLASS')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Resulting AWS T-Shirt LSV/JIRA</mat-label>
-          <input matInput formControlName="RESULTING_AWS_T_SHIRT_LSV_JIRA">
-          <mat-error *ngIf="form.get('RESULTING_AWS_T_SHIRT_LSV_JIRA')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Story points</mat-label>
-          <input matInput formControlName="STORY_POINTS">
-          <mat-error *ngIf="form.get('STORY_POINTS')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Strategy Budget received</mat-label>
-          <input matInput formControlName="STRATEGY_BUDGET_RECEIVED">
-          <mat-error *ngIf="form.get('STRATEGY_BUDGET_RECEIVED')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>T-Shirt Infra LSV</mat-label>
-          <input matInput formControlName="T_SHIRT_INFRA_LSV">
-          <mat-error *ngIf="form.get('T_SHIRT_INFRA_LSV')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>T-Shirt Interfaces</mat-label>
-          <input matInput formControlName="T_SHIRT_INTERFACES">
-          <mat-error *ngIf="form.get('T_SHIRT_INTERFACES')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <mat-form-field appearance="fill">
-          <mat-label>Target All Application Type and Tech Stack Tags</mat-label>
-          <input matInput formControlName="TARGET_ALL_APPLICATION_TYPE_AND_TECH_STACK_TAGS">
-          <mat-error *ngIf="form.get('TARGET_ALL_APPLICATION_TYPE_AND_TECH_STACK_TAGS')?.hasError('required')">This field is required</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div class="form-row">
-        <button mat-raised-button color="primary" type="submit">SUBMIT FORM</button>
-      </div>
-    </form>
-  </div>
-</mat-card>
+<router-outlet></router-outlet>
