pagination fix, styling and populating edit form

--- a/src/app/list-view/list-view.component.html
+++ b/src/app/list-view/list-view.component.html
@@ -193,7 +193,7 @@
   
     <mat-paginator
       (page)="onPageChange($event)"
-      [length]="appData.length"
+      [length]="datasetLength"
       [pageSize]="pageSize"
       [pageSizeOptions]="pageSizeOptions"
     ></mat-paginator>
