--- a/src/app/list-view/list-view.component.html
+++ b/src/app/list-view/list-view.component.html
@@ -184,7 +184,7 @@
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef class="column-header"> Actions </mat-header-cell>
         <mat-cell *matCellDef="let element" class="column-cell">
-          <button mat-button (click)="editApp(element.APP_ID)">Edit</button>
+          <button mat-button (click)="openEditDialog(element)">Edit</button>
         </mat-cell>
       </ng-container>
   
