--- a/src/app/list-view/list-view.component.html
+++ b/src/app/list-view/list-view.component.html
@@ -2,10 +2,14 @@
     <mat-table [dataSource]="appData" class="mat-elevation-z8 mat-table-responsive">
       
       <!-- APP ID Column -->
-      <ng-container matColumnDef="APP_ID">
+    <ng-container matColumnDef="APP_ID">
         <th mat-header-cell *matHeaderCellDef class="column-header"> APP ID </th>
-        <td mat-cell *matCellDef="let element" class="column-cell"> {{element['APP_ID']}} </td>
-    </ng-container>
+        <td mat-cell *matCellDef="let element" class="column-cell">
+          <a href="#" (click)="openEditDialog(element); $event.preventDefault();" class="app-id-link">
+            {{element['APP_ID']}}
+          </a>
+        </td>
+      </ng-container>
 
     <!-- APP NAME Column -->
     <ng-container matColumnDef="APP NAME">
@@ -180,13 +184,6 @@
         <th mat-header-cell *matHeaderCellDef class="column-header"> Initial Attestation Date </th>
         <td mat-cell *matCellDef="let element" class="column-cell"> {{element['Initial Attestation Date']}} </td>
     </ng-container>
-  
-      <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef class="column-header"> Actions </mat-header-cell>
-        <mat-cell *matCellDef="let element" class="column-cell">
-          <button mat-button (click)="openEditDialog(element)">Edit</button>
-        </mat-cell>
-      </ng-container>
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
