--- a/src/app/edit-form/edit-form.component.html
+++ b/src/app/edit-form/edit-form.component.html
@@ -276,6 +276,7 @@
         <div mat-dialog-actions>
             <button mat-raised-button color="danger" (click)="onCancel()">Cancel</button>
             <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Save</button>
+            <mat-spinner *ngIf="loading" class="loading-spinner" diameter="30"></mat-spinner>
         </div>
       </form>
     </div>
