--- a/src/app/edit-form/edit-form.component.html
+++ b/src/app/edit-form/edit-form.component.html
@@ -1,5 +1,5 @@
 <mat-card class="form-card">
-    <h2 mat-dialog-title>Edit Form</h2>
+    <h2 mat-dialog-title class="form-title">Edit Form</h2>
     <div mat-dialog-content class="dialog-content">
       <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-grid">
   
