--- a/src/app/edit-form/edit-form.component.scss
+++ b/src/app/edit-form/edit-form.component.scss
@@ -1,30 +1,4 @@
-// mat-card {
-//     max-width: 700px;
-//     margin: 2rem auto;
-//     padding: 1rem;
-// }
 
-// .form-card {
-//     max-height: 250vh;
-//     overflow: hidden;
-// }
-  
-// .form-container {
-//     max-height: 100%;
-//     overflow-y: auto;
-//     padding: 16px;
-// }
-
-// .form-grid {
-//     display: flex;
-//     flex-direction: column;
-// }
-  
-// .form-row {
-//     display: flex;
-//     flex-direction: column;
-//     margin-bottom: 8px;
-// }
 
 .form-row {
     margin-bottom: 16px;
@@ -57,4 +31,9 @@
 
   .loading-spinner {
     margin-left: 10px;
+  }
+
+  .form-title {
+    margin-top: 10px;
+    margin-left: 20px;
   }
