--- a/src/app/list-view/list-view.component.html
+++ b/src/app/list-view/list-view.component.html
@@ -1,3 +1,10 @@
+<div class="search-container">
+    <mat-form-field appearance="fill">
+      <mat-label>Search by APP ID</mat-label>
+      <input matInput (input)="applyFilter($event)" placeholder="Enter APP ID">
+    </mat-form-field>
+  </div>
+
 <app-loader [loading]="loading$ | async"></app-loader>
 
 <div class="table-container" [ngClass]="{'blurred': (loading$ | async)}">
@@ -189,15 +196,15 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
+ 
+</div>
 
-
+<div class="paginator-container">
     <mat-paginator
       (page)="onPageChange($event)"
       [length]="datasetLength"
       [pageSize]="pageSize"
       [pageSizeOptions]="pageSizeOptions"
     ></mat-paginator>
-  
-  
 </div>
 
