--- a/src/app/list-view/list-view.component.scss
+++ b/src/app/list-view/list-view.component.scss
@@ -1,5 +1,4 @@
 
-
 .table-container {
     overflow-x: auto;
     width: 100%;
@@ -64,7 +63,8 @@
 
   .search-container {
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
     margin-left: 20px;
     margin-top: 16px;
     margin-bottom: 16px;
@@ -72,4 +72,15 @@
     top: 0;
     background-color: white; /* Ensure it covers content behind */
     z-index: 1; /* Make sure it appears above the table */
+  }
+  
+  .search-input {
+    border: 1px solid #ccc;
+    border-radius: 25px; /* Curved edges */
+    padding: 10px 20px; /* Padding */
+    font-size: 14px;
+    width: 100%;
+    max-width: 300px; /* Optional max width */
+    margin-top: 5px; /* Space between label and input */
+    box-sizing: border-box;
   }
