--- a/src/app/edit-form/edit-form.component.html
+++ b/src/app/edit-form/edit-form.component.html
@@ -274,7 +274,7 @@
         </div>
 
         <div mat-dialog-actions>
-            <button mat-raised-button color="danger" (click)="onCancel()">Cancel</button>
+            <button mat-raised-button color="danger" type="button" (click)="onCancel()">Cancel</button>
             <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Save</button>
             <mat-spinner *ngIf="loading" class="loading-spinner" diameter="30"></mat-spinner>
         </div>
